[package]
name = "sakura"
version = "0.0.0"
authors = ["Yau-ming Leung <ymleung314@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/ymleung314/sakura"
license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = { version = "1.25", features = ["must_cast"] }
libc = "0.2"
thiserror = "2"
